myteo/test/parser/ast/pattern/string_literal_error.myte
module test

val (x, "asdf", y): int = 1